[tool.poetry]
name = "wub-hub"
version = "0.1.0"
description = ""
authors = ["Filipe Oliveira <hi@fmoliveira.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"
rcon = "^2.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
